2011-02-22 mmichaud <michael.michaud@free.fr>
    * removed unused com.sun.corba.se.impl.protocol.giopmsgheaders.KeyAddr
    * removed unused com.sun.org.apache.xerces.internal.impl.dv.xs.DecimalDV
      in com.vividsolutions.jump.workbench.ui.plugin.clipboard.PasteItemsPlugIn
	* removed a sun proprietary code dependency in 
	  com.vividsolutions.jump.workbench.imagery.graphic.GraphicImage
	  note 1 : the code was supposed to set different rendering hints for gray
	  jpg image and for other jpg image types, but I could not see any effect
	  note 2 : Currently ImageGraphic does interpolation for image rendering
	  while the new Sextante Raster framework does not.

2011-02-16 Matthias Scholz <ms@jammerhund.de>
	* updated german translation for LayerPropertiesPlugIn

2011-02-09 mmichaud <michael.michaud@free.fr> for mrashad
    * org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn
        add layer extent to the information panel

2011-02-12 Matthias Scholz <ms@jammerhund.de>
	* org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn
		Bugfix in WriteLayer(), the charset was not considered while saving an
		existing layer into a shapefile. So it was possible that you get wrong
		strings in the dbf file.
	* org.openjump.core.ui.plugin.tools.AdvancedMeasureTool
		Bugfix in actionPerformed() to viewing the right OptionTab
	* com.vividsolutions.jump.workbench.JUMPConfiguration
		switched from the old MeasureTool to the new AdvancedMeasureTool

2011-02-09 mmichaud <michael.michaud@free.fr> for mrashad
    * org.openjump.core.rasterimage.AddRasterImageLayerWizard
      Now load an image without worldfile. Default coordinates are used to
      display the image and the corresponding worldfile is created.

2011-01-25 mmichaud <michael.michaud@free.fr>
    * Bugfix in ColorThemingStyle : when a numeric attribute contains
      only nulls, or less values than breaks, classification methods fail and
      break following classification processes