@@ -1,3 +1,10 @@
+2011-02-23 Matthias Scholz <ms@jammerhund.de>
+	* Changes for a better presentation of attribute values. Now Date, Double
+	  and Integer attributes will be formatted with the default loacle settings.
+	  Changes in:
+		* com.vividsolutions.jump.workbench.ui.renderer.style.LabelStyle.paint(Feature f, Graphics2D g, Viewport viewport)
+		* com.vividsolutions.jump.workbench.ui.style.LabelStylePanel.sampleText()
+
 2011-02-22 mmichaud <michael.michaud@free.fr>
     * removed unused com.sun.corba.se.impl.protocol.giopmsgheaders.KeyAddr
     * removed unused com.sun.org.apache.xerces.internal.impl.dv.xs.DecimalDV
